<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="ge.edu.ibsu.mobile.berdia.labwork4.activities.DetailsActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="@dimen/two_hundred_fifty"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvSurname"
        android:layout_width="@dimen/two_hundred_fifty"
        android:layout_height="wrap_content"
        android:text="@string/surname" />

    <TextView
        android:id="@+id/tvMonthOfBirth"
        android:layout_width="@dimen/two_hundred_fifty"
        android:layout_height="wrap_content"
        android:text="@string/month_of_birth" />

    <TextView
        android:id="@+id/tvSeason"
        android:layout_width="@dimen/two_hundred_fifty"
        android:layout_height="wrap_content"
        android:text="@string/season" />

    <TextView
        android:id="@+id/tvFavouriteLecture"
        android:layout_width="@dimen/two_hundred_fifty"
        android:layout_height="wrap_content"
        android:text="@string/android" />

</LinearLayout>
